--- a/src/app/my-web-component/my-web-component.component.css
+++ b/src/app/my-web-component/my-web-component.component.css
@@ -105,12 +105,13 @@
 .maincontainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 1rem;
+  height: 100%;
+  overflow: scroll;
   text-align: center;
-  /* width: 50%; */
   padding: 10px;
-  background-color: rgb(233, 233, 233);
+  background-color: #e9e9e9;
 }
 
 .profileInfoSection {
@@ -151,7 +152,7 @@
   display: flex;
   column-gap: 0.5rem;
   padding: 5px;
-  width: 100%;
+  /* width: 100%; */
   z-index: 0;
 
 }
@@ -168,6 +169,16 @@
   width: 100%;
   z-index: 0;
 }
+.suggestedResTranslateSection .options{
+ display: flex;
+ flex-direction: row;
+
+}
+.suggestedResTranslateSection .options select{
+  width: 50%;
+  margin: 0% 0.8%  0% 0.8%;
+  justify-content: space-around;
+ }
 
 .suggestedResTranslateSection>div {
   flex: 1;
@@ -281,7 +292,6 @@
   margin-bottom: 7px;
   display: flex;
   padding: 0 10px 0;
-  line-height: normal;
 }
 .journeybutton{
   display: flex;
@@ -296,6 +306,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .registertab img{
   object-fit: cover;
@@ -305,6 +318,30 @@
   flex-direction: row;
   justify-content: space-evenly;
 }
+
+
+.registertab .image-container {
+  height: 80px;
+  width: 80px;
+  background-size: cover;
+  margin: 10px 40px 5px;
+}
+
+.registertab .image-container img{
+  
+}
+
+/* .registertab .registered {
+  background-image: url('../assets/registered.png');
+}
+
+.registertab .non-registered {
+  background-image: url('../assets/non-registered.png');
+} */
+
+
+
+
 
 .casetabdetails{
   display: flex;
@@ -393,6 +430,3 @@ margin: 0 0 15px;
   margin-left: 10px;
 }
 
-span {
-  font-family: 'Segoe UI Emoji', 'Noto Color Emoji', 'Apple Color Emoji', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'sans-serif';
-}
